[gd_scene load_steps=2 format=3 uid="uid://x580wq6oruq7"]

[ext_resource type="Script" path="res://main.gd" id="1_xe84b"]

[node name="main" type="Node2D"]
script = ExtResource("1_xe84b")

[node name="menu" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 15.0
offset_top = 15.0
offset_right = 438.0
offset_bottom = 308.0

[node name="btnGameOfLife" type="LinkButton" parent="menu"]
layout_mode = 2
text = "Game of Life"

[node name="btnKernelConvolution" type="LinkButton" parent="menu"]
layout_mode = 2
text = "Step 2 - Kernel Convolution"

[node name="btnIncrementalGrowth" type="LinkButton" parent="menu"]
layout_mode = 2
text = "Step 3 - Incremental Growth"

[node name="btnMultipleStates" type="LinkButton" parent="menu"]
layout_mode = 2
text = "Step 4 - Multiple States"

[node name="btnNormalizeKernel" type="LinkButton" parent="menu"]
layout_mode = 2
text = "Step 5 - Normalize Kernel"

[node name="btnContStatesTime" type="LinkButton" parent="menu"]
layout_mode = 2
text = "Step 6 - Continuous State and Time"

[node name="btnContSpaceEnlargeKernel" type="LinkButton" parent="menu"]
layout_mode = 2
text = "Step 7 - Continuous Space - Enlarge Kernel"

[node name="btnContSpaceRingKernel" type="LinkButton" parent="menu"]
layout_mode = 2
text = "Step 8 - Continuous Space - Ring Kernel"

[node name="btnContSpaceSmoothKernelGrowth" type="LinkButton" parent="menu"]
layout_mode = 2
text = "Step 9 - Continuous Space - Smooth Kernel and Growth"

[node name="btnOrbium" type="LinkButton" parent="menu"]
layout_mode = 2
text = "Step 10 - Lenia Orbium"

[node name="btnFourPanelDisplay" type="LinkButton" parent="menu"]
layout_mode = 2
text = "Step 11 - Four Panel Display"

[node name="gridDisplay" type="Node2D" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="menu/btnGameOfLife" to="." method="_on_btn_game_of_life_pressed"]
[connection signal="pressed" from="menu/btnKernelConvolution" to="." method="_on_btn_kernel_convolution_pressed"]
[connection signal="pressed" from="menu/btnIncrementalGrowth" to="." method="_on_btn_incremental_growth_pressed"]
[connection signal="pressed" from="menu/btnMultipleStates" to="." method="_on_btn_multiple_states_pressed"]
[connection signal="pressed" from="menu/btnNormalizeKernel" to="." method="_on_btn_normalize_kernel_pressed"]
[connection signal="pressed" from="menu/btnContStatesTime" to="." method="_on_btn_cont_states_time_pressed"]
[connection signal="pressed" from="menu/btnContSpaceEnlargeKernel" to="." method="_on_btn_cont_space_enlarge_kernel_pressed"]
[connection signal="pressed" from="menu/btnContSpaceRingKernel" to="." method="_on_btn_cont_space_ring_kernel_pressed"]
[connection signal="pressed" from="menu/btnContSpaceSmoothKernelGrowth" to="." method="_on_btn_cont_space_smooth_kernel_growth_pressed"]
[connection signal="pressed" from="menu/btnOrbium" to="." method="_on_btn_orbium_pressed"]
[connection signal="pressed" from="menu/btnFourPanelDisplay" to="." method="_on_btn_four_panel_display_pressed"]
